<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, FirstActivity!</string>
	<string name="app_name">嘉创历通</string>
	<string name="index">历通首页</string>
	<string name="search">历通搜索</string>
	<string name="more">历通更多</string>
	<string name="record">历通记录</string>
	<string name="advice">历通建议</string>
	<string name="exit">历通退出</string>
	<string name="boy">男鞋</string>
	<string name="girl">女鞋</string>
	<string name="moreXie">更多分类</string>
	<string name="boyshoes">男鞋分类</string>
	<string name="girlshoes">女鞋分类</string>
	<string name="moreshoes">更多分类</string>
	<!-- 底部 -->
	<!-- 底部公共菜单模块 -->
	<string name="menu_home">首页</string>
	<string name="menu_brand">分类</string>
	<string name="menu_shopping_cart">购物车</string>
	<string name="menu_my_letao">历通</string>
	<string name="menu_more">更多</string>
	<!-- 底部菜单模块<更多> -->
	<string name="servce" >历通服务承诺</string>
	<string name="about">关于历通</string>
	<string name="history">历通浏览记录</string>
	<string name="hotline">历通服务热线</string>
	<string name="suggest">建议历通</string>
	<string name="microblog">历通博客</string>
	<!-- 底部菜单模块<我的乐淘> -->
	<string name="myletao">我的乐淘</string>
	<string name="myaddress">我的地址本</string>
	<string name="mypassword">修改密码</string>
	<string name="mycollect">我的收藏</string>
	<string name="myindent">我的订单</string>
	<string name="myfavorable">我的优惠卷</string>
	
	<string name="fristlogin">登陆</string>
	<string name="login_name">帐号：</string>
	<string name="login_name_text">请输入您的手机号或邮箱</string>
	<string name="login_username_hint_str">*暂不支持QQ、支付宝、网易、人人网等帐号登录</string>
	<string name="login_password_text">请输入您的密码</string>
	<string name="login_return_btn">忘记密码</string>
	<string name="login_register_btn">用户注册</string>
	<string name="login_password">密码：</string>
	<string name="user_login">用户登陆</string>
	<string name="return_password_submit">找回密码</string>
	<string name="register_name">帐号:</string>
	<string name="register_password_presentation">密码3-25位,区分大小写</string>
	<string name="register_make_sure_password">确认密码:</string>
	<string name="register_submit">注册</string>
	<!-- 修改密码 -->
	<string name="changepassword_originalpassword_str">旧密码:</string>
	<string name="changepassword_newpassword_str">新密码:</string>
	<string name="change_password_old_psw">请输入旧密码</string>
	<string name="change_password_new_psw">请输入新密码</string>
	<string name="change_password_again">再次输入新密码</string>
	<string name="change_password_confirm">确定修改</string>
	<string name="myletao_modifypassword_str">修改密码</string>
	<!-- 我的地址本 -->
	<string name="title_my_delivery_address">我的地址本</string>
	<string name="my_delivery_address_submit">添加收货地址</string>
	<string name="title_add_address">新增地址</string>
	<string name="address_name">收货人:</string>
	<string name="address_phone">手机号码:</string>
	<string name="address_province">省份:</string>
	<string name="address_city">城市:</string>
	<string name="address_area">地区:</string>
	<string name="address_detail">详细地址:</string>
	<string name="address_email">电子邮箱:</string>
	<string name="address_choose">请选择</string>
	<string name="address_save">保存</string>
	<string name="address_cancel">取消</string>
	<!-- 我的优惠券 -->
	<string name="title_my_coupon">我的优惠券</string>
	<string name="addcoupan1">添加优惠券</string>
	<string name="shopping_cartcoupon_nocoupon_str">暂无优惠券</string>
	<string name="about_attention">关注手机乐淘微博，获得最新优惠信息</string>
	<string name="shopping_cartcoupon_letaoinphone_str">手机乐淘:</string>
	<string name="add_coupon_input_coupon">输入优惠券号码</string>
	<string name="add_coupon_add">添加</string>
	<string name="add_coupon_cancel">放弃</string>
	<!-- 我的收藏 -->
	<string name="title_my_favorite">我的收藏</string>
	<!-- 我的订单 -->
	<string name="title_my_order">我的订单</string>
	<!-- 我的分类 -->
	<string name="title_myletao_type">分类</string>
	<string name="searchbar_hint">商品货号\u0020\u0020名称\u0020\u0020品牌\u0020\u0020款式
	</string>
	<!-- 虚拟数据 -->
	<string name="login">用户名:</string>
	<string name="time">上次登陆时间:</string>
	<string name="username">trx_java@163.com</string>
	<string name="usertime">2011年8月8日</string>
	<!-- 底部TextView -->
	<string name="suggest_textview">欢迎您提出宝贵的意见和建议，我们将为您提供更好的服务体验。</string>
	<!-- 底部 -->
	<string name="commoditysort_new_str">新品</string>
	<string name="commoditysort_hot_str">热销</string>
	<string name="commoditysort_price_str">价格</string>
	<string name="previous_page">上一页</string>
	<string name="next_page">下一页</string>
	<string name="new_xie">新品</string>
	<string name="commodity_detail_size">尺码:</string>
	<string name="commodity_detail_input_cart">加入购物车</string>
	<string name="commodity_detail_favorite">收藏</string>
	<string name="commodity_detail_message">商品信息</string>
	<string name="commodity_detail_listing_date">上市日期:</string>
	<string name="commodity_detail_style">款式:</string>
	<string name="commodity_detail_textures">材质:</string>
	<string name="commodity_detail_model">货号:</string>
	<string name="commodity_detail_man_woman">男女款:</string>
	<string name="commodity_detail_colors">颜色:</string>
	<string name="spikeare_detail_tobuy">立即购买</string>
	<string name="commodity_detail_counter_price">专柜价格:</string>
	<string name="commodity_detail_letao_price">乐淘价格:</string>
	<!-- 购物车模块 -->
	<string name="title_letao_shopping_car">我的购物车</string>
	<string name="go_shopping_text">去逛逛</string>
</resources>
