<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    >
    
    <!-- 顶部标题 -->
	<include android:id="@+id/title" layout="@layout/title" />
	<!-- 底部菜单 -->
	<include android:id="@+id/bottommenu" layout="@layout/common_bottommenu" />
	<include layout="@layout/common_listview" />
<!-- 中间内容 -->
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_above="@id/bottommenu"
		android:layout_below="@id/title" android:orientation="vertical">
		<!-- 旧密码 -->
		<LinearLayout android:orientation="horizontal"
			android:id="@+id/changepassword_originalpassword_layout"
			android:layout_width="260dip" android:layout_height="wrap_content"
			android:layout_marginTop="10dip" android:background="@drawable/input_box"
			android:layout_gravity="center_horizontal">
			<TextView android:layout_width="70dip"
				android:text="@string/changepassword_originalpassword_str"
				android:textColor="@color/black" android:layout_gravity="center_vertical"
				android:layout_height="wrap_content" android:layout_marginLeft="10dip" />
			<EditText android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/changepassword_originalpassword_edit"
				android:singleLine="true" android:hint="@string/change_password_old_psw"
				android:textSize="14sp" android:layout_gravity="center_vertical"
				android:background="@null" />
		</LinearLayout>
		<!-- 新密码 -->
		<LinearLayout android:orientation="horizontal"
			android:id="@+id/changepassword_newpassword_layout"
			android:layout_width="260dip" android:layout_height="wrap_content"
			android:layout_marginTop="10dip" android:background="@drawable/input_box"
			android:layout_gravity="center_horizontal">
			<TextView android:layout_width="70dip"
				android:text="@string/changepassword_newpassword_str"
				android:textColor="@color/black" android:layout_gravity="center_vertical"
				android:layout_height="wrap_content" android:layout_marginLeft="10dip" />
			<EditText android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/changepassword_newpassword_edit"
				android:singleLine="true" android:hint="@string/change_password_new_psw"
				android:textSize="14sp" android:layout_gravity="center_vertical"
				android:background="@null" />
		</LinearLayout>
		<!-- 确认密码 -->
		<LinearLayout android:orientation="horizontal"
			android:id="@+id/changepassword_newpasswordagain_layout"
			android:layout_width="260dip" android:layout_height="wrap_content"
			android:layout_marginTop="10dip" android:background="@drawable/input_box"
			android:layout_gravity="center_horizontal">
			<TextView android:layout_width="70dip"
				android:text="@string/register_make_sure_password"
				android:textColor="@color/black" android:layout_gravity="center_vertical"
				android:layout_height="wrap_content" android:layout_marginLeft="10dip" />
			<EditText android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/changepassword_newpasswordagain_edit"
				android:singleLine="true" android:hint="@string/change_password_new_psw"
				android:textSize="14sp" android:layout_gravity="center_vertical"
				android:background="@null" />
		</LinearLayout>
		<TextView android:id="@+id/changepassword_confirmchange_btn"
			android:layout_width="150dip" android:layout_height="wrap_content"
			android:text="@string/change_password_confirm" android:textColor="@color/white"
			android:textSize="20sp" android:background="@drawable/btn_pink"
			android:layout_marginTop="20dip" android:layout_gravity="center_horizontal"
			android:gravity="center" />
	</LinearLayout>
</RelativeLayout>